@@ -1,4 +1,6 @@
 Changes towards version 0.7:
+- Added TFB_Canvas_Lock(), TFB_Canvas_Unlock() and TFB_Canvas_GetStride()
+  - SvdB
 - Scaling images with respect to their hotspots: stabilizes compound
   Melee objects; re-added bilinear Melee scaler; zooming planet uses
   bilinear; fixes bug #685 - Alex
